# TFM-Simulations

./: .gitignore  README.md  basrhc.txt  install_all.sh  install_all_ubuntu20-04.sh
Atenuacion alpha/: Alpha_Al.txt  Alpha_Ar.txt  Alpha_C.txt  Calculo.ipynb
Study Scintillation Degrad/version0/: amoedo_model.py  amoedo_refined_model_garbagecCollector.py  make_data.py  make_fit.py  make_fit_garbageModel.py  make_grafica.py  new_fit.py  read_Degrad_input.py
Study Scintillation Degrad/version1/: Amoedo_Model.py  Amoedo_Model_Degrad.py  Amoedo_Model_DivisionFit.py  Fit_Degrad.py  Fit_Division_DegradData.py  Fit_Division_DegradFit.py  Make_fits_plots_DegradData.py  Make_fits_plots_DegradFit.py  Read_Degrad.py  Read_Experimental_Yield.py
Study_Scintillation_Degrad/: amoedo_model.py  amoedo_refined_model.py  amoedo_refined_model_garbagecCollector.py  amoedo_refined_model_simple.py  grafica.py  make_data.py  write_Yield_Poblation.py
Study_Scintillation_Degrad/failed/: _amoedo_refined_model.py
Study_Scintillation_Degrad/input/: cf4_input_90Ar10CF4.csv  output_99.9Ar_0.1CF4.txt
Study_Scintillation_Degrad/pickle_data/: poblations_Ar_dbleStar.pkl  poblations_CF3.pkl  scintillationProbability_PAModel_Ar3rd.pkl  scintillationProbability_PAModel_CF3.pkl  scintillationProbability_PAModel_CF4.pkl
electricField Uniform/: runUniform.py  uniformE.C
electricFieldUniform/: CMakeLists.txt  README.md  uniformE.C
fatGem/: fatGem.C  runFatGem.py
fatGem/ViewDrift/: CMakeLists.txt  README.txt  ViewDrift.C
fatGem_carlosAzevedo/: CMakeLists.txt  fatGem.C
(+67 files in other folders)
